--- a/src/styles.css
+++ b/src/styles.css
@@ -9,9 +9,37 @@ html {
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  background-image: url('./images/sky.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.search-form {
+  font-size: 40px;
+  width: 450px;
+  height: 20px;
+  margin: 0 auto;
+}
+input {
+  font-size: 18px;
+  width: 300px;
+  height: 30px;
+}
+button {
+  width: 100px;
+  height: 30px;
+}
 
-  background-image: url('images/bg-pattern.png');
+.weather {
+  width: 300px;
+  border: 1px solid #222222;
+  margin: 10% 0 0 5%;
+  padding: 20px;
+  background-image: url(./images/bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
